<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="app_name">Deportiva</string>
    <string name="action_settings">Settings</string>
    <string name="icono_linea">Icono de cada linea</string>
    <string name="portero">Porteros</string>
    <string name="defensa">Defensas</string>
    <string name="centro">Centrocampistas</string>
    <string name="delantero">Delanteros</string>
    <string name="nombredeportivo">Nombre deportivo:</string>
    <string name="nombre">Nombre completo:</string>
    <string name="posicion">Posición:</string>
    <string name="nacimiento">Fecha nacimiento:</string>
    <string name="nacido">Nació en:</string>
    <string name="peso">Peso:</string>
    <string name="estatura">Estatura:</string>
    <string name="procedencia">Procedencia:</string>
    <string name="dorsal">Dorsal:</string>
    <string name="title_activity_dinu">Dinu Moldovan</string>
    <string name="nombre_depor_dinu">Dinu</string>
    <string name="nombre_dinu">Dinu Moldovan Bogdam</string>
    <string name="posicion_portero">Portero</string>
    <string name="nacimiento_dinu">03/05/1990</string>
    <string name="pais_dinu">Albalulia(Rumanía)</string>
    <string name="peso_dinu">72</string>
    <string name="estatura_dinu">1.83 m.</string>
    <string name="proc_dinu">SD Ponferradina</string>
    <string name="dorsal_dinu">25</string>
    <string name="title_activity_prieto">Prieto</string>
    <string name="nombre_depor_prieto">Prieto</string>
    <string name="nombre_prieto">Francisco Javier Prieto Caroca</string>
    <string name="nacimiento_prieto">01/07/1983</string>
    <string name="pais_prieto">Antofagasta(Chile)</string>
    <string name="peso_prieto">79</string>
    <string name="estatura_prieto">1.88 m.</string>
    <string name="proc_prieto">Mirandés</string>
    <string name="dorsal_prieto">13</string>
    <string name="title_activity_kepa">Kepa Arrizabalaga</string>
    <string name="nombre_depor_kepa">Arrizabalaga</string>
    <string name="nombre_kepa">Kepa Arrizabalaga Revuelta</string>
    <string name="nacimiento_kepa">03/10/1994</string>
    <string name="pais_kepa">Ondárroa(Vizcaya)</string>
    <string name="peso_kepa">85</string>
    <string name="estatura_kepa">1.89 m.</string>
    <string name="proc_kepa">Athletic Club</string>
    <string name="dorsal_kepa">1</string>
    <string name="title_activity_carpio">Carpio</string>
    <string name="nombre_depor_carpio">Carpio</string>
    <string name="nombre_carpio">Javier Carpio Martín</string>
    <string name="posicion_defensa">Defensa</string>
    <string name="nacimiento_carpio">06/04/1984</string>
    <string name="pais_carpio">Salamanca</string>
    <string name="peso_carpio">72</string>
    <string name="estatura_carpio">1.75 m.</string>
    <string name="proc_carpio">SD Ponferradina</string>
    <string name="dorsal_carpio">2</string>
    <string name="title_activity_alan">Alan Baró</string>
    <string name="nombre_depor_alan">Alan</string>
    <string name="nombre_alan">Alan Baró Calabuig</string>
    <string name="nacimiento_alan">22/06/1985</string>
    <string name="pais_alan">Darnius(Girona)</string>
    <string name="peso_alan">73</string>
    <string name="estatura_alan">1.80 m.</string>
    <string name="proc_alan">SD Ponferradina</string>
    <string name="dorsal_alan">15</string>
    <string name="title_activity_lucas">Lucas</string>
    <string name="nombre_depor_lucas">Lucas</string>
    <string name="nombre_lucas">Lucas Domínguez Irarrázabal</string>
    <string name="nacimiento_lucas">27/10/1989</string>
    <string name="pais_lucas">Pirque(Chile)</string>
    <string name="peso_lucas">75</string>
    <string name="estatura_lucas">1.86 m.</string>
    <string name="proc_lucas">Colo-Colo</string>
    <string name="dorsal_lucas">4</string>
    <string name="title_activity_castaneda">Julen Castañeda</string>
    <string name="nombre_depor_castaneda">J.Castañeda</string>
    <string name="nombre_castaneda">Julen Castañeda Nuin</string>
    <string name="nacimiento_castaneda">14/11/1990</string>
    <string name="pais_castaneda">Tolosa</string>
    <string name="peso_castaneda">75.5</string>
    <string name="estatura_castaneda">1.79 m.</string>
    <string name="proc_castaneda">SD Ponferradina</string>
    <string name="dorsal_castaneda">3</string>
    <string name="title_activity_camille">Camille</string>
    <string name="nombre_depor_camille">Camille</string>
    <string name="nombre_camille">Samuel Camille Geoffroy</string>
    <string name="nacimiento_camille">02/02/1986</string>
    <string name="pais_camille">Saint-Denis(Francia)</string>
    <string name="peso_camille">69</string>
    <string name="estatura_camille">1.76 m.</string>
    <string name="proc_camille">A.D.Alcorcón</string>
    <string name="dorsal_camille">24</string>
    <string name="title_activity_oscar">Óscar Ramírez</string>
    <string name="nombre_depor_oscar">O.Ramírez.J</string>
    <string name="nombre_oscar">Óscar Ramírez Martín</string>
    <string name="nacimiento_oscar">01/03/1984</string>
    <string name="pais_oscar">Girona</string>
    <string name="peso_oscar">77</string>
    <string name="estatura_oscar">1.83 m.</string>
    <string name="proc_oscar">SD Ponferradina</string>
    <string name="dorsal_oscar">20</string>
    <string name="title_activity_aguilar">Alberto Aguilar</string>
    <string name="nombre_depor_aguilar">Alberto A.</string>
    <string name="nombre_aguilar">Alberto Aguilar Leiva</string>
    <string name="nacimiento_aguilar">12/07/1984</string>
    <string name="pais_aguilar">Benamejí(Córdoba)</string>
    <string name="peso_aguilar">80.5</string>
    <string name="estatura_aguilar">1.84 m.</string>
    <string name="proc_aguilar">SD Ponferradina</string>
    <string name="dorsal_aguilar">22</string>
    <string name="title_activity_jonathan">Jonathan Ruiz</string>
    <string name="nombre_depor_jonathan">Jonathan</string>
    <string name="nombre_jonathan">Jonathan Ruiz Llaga</string>
    <string name="posicion_centro">Centrocampista</string>
    <string name="nacimiento_jonathan">02/04/1982</string>
    <string name="pais_jonathan">Écija(Sevilla)</string>
    <string name="peso_jonathan">64</string>
    <string name="estatura_jonathan">1.70 m.</string>
    <string name="proc_jonathan">SD Ponferradina</string>
    <string name="dorsal_jonathan">14</string>
    <string name="title_activity_acoran">Acorán</string>
    <string name="nombre_depor_acoran">Acorán</string>
    <string name="nombre_acoran">Acorán Barrera Reyes</string>
    <string name="nacimiento_acoran">31/01/1983</string>
    <string name="pais_acoran">Tenerife</string>
    <string name="peso_acoran">68</string>
    <string name="estatura_acoran">1.73 m.</string>
    <string name="proc_acoran">SD Ponferradina</string>
    <string name="dorsal_acoran">16</string>
    <string name="title_activity_rueda">Rueda</string>
    <string name="nombre_depor_rueda">Rueda</string>
    <string name="nombre_rueda">José Manuel Rueda Sampedro</string>
    <string name="nacimiento_rueda">30/01/1988</string>
    <string name="pais_rueda">Linares(Jaén)</string>
    <string name="peso_rueda">72.5</string>
    <string name="estatura_rueda">1.78 m.</string>
    <string name="proc_rueda">SD Ponferradina</string>
    <string name="dorsal_rueda">8</string>
    <string name="title_activity_andy">Andy</string>
    <string name="nombre_depor_andy">Andy</string>
    <string name="nombre_andy">José Andrés Rodríguez Gaitán</string>
    <string name="nacimiento_andy">30/01/1990</string>
    <string name="pais_andy">Almuñecar(Granada)</string>
    <string name="peso_andy">79</string>
    <string name="estatura_andy">1.85 m.</string>
    <string name="proc_andy">Levante B</string>
    <string name="dorsal_andy">17</string>
    <string name="title_activity_adan">Adán</string>
    <string name="nombre_depor_adan">Adán</string>
    <string name="nombre_adan">Adán Gurdiel Mella</string>
    <string name="nacimiento_adan">14/12/1993</string>
    <string name="pais_adan">Fabero(León)</string>
    <string name="peso_adan">69</string>
    <string name="estatura_adan">1.78 m.</string>
    <string name="proc_adan">SD Ponferradina</string>
    <string name="dorsal_adan">26</string>
    <string name="title_activity_gaztanaga">Jon Gaztañaga</string>
    <string name="nombre_depor_gaztanaga">Gaztañaga</string>
    <string name="nombre_gaztanaga">Jon Gaztañaga Arrospide</string>
    <string name="nacimiento_gaztanaga">26/06/1991</string>
    <string name="pais_gaztanaga">Andoáin(Guipúzcoa)</string>
    <string name="peso_gaztanaga">80</string>
    <string name="estatura_gaztanaga">1.82 m.</string>
    <string name="proc_gaztanaga">Real Sociedad</string>
    <string name="dorsal_gaztanaga">6</string>
    <string name="title_activity_tete">Tete</string>
    <string name="nombre_depor_tete">Tete</string>
    <string name="nombre_tete">Alberto Sansinena Chamorro</string>
    <string name="nacimiento_tete">26/05/1985</string>
    <string name="pais_tete">Badajoz</string>
    <string name="peso_tete">59</string>
    <string name="estatura_tete">1.66 m.</string>
    <string name="proc_tete">Real Murcia</string>
    <string name="dorsal_tete">19</string>
    <string name="title_activity_melero">Gonzalo Melero</string>
    <string name="nombre_depor_melero">Melero</string>
    <string name="nombre_melero">Gonzalo Julián Melero Manzanares</string>
    <string name="presidente">Presidente:</string>
    <string name="presidente_nombre">Don José Fernández Nieto (12 temporadas en el cargo)</string>
    <string name="vicepresidente">Vicepresidente:</string>
    <string name="vicepresidente_nombre">D.Carlos Castañeiras Folgueral</string>
    <string name="secretario">Secretario:</string>
    <string name="secretario_nombre">D.Domingo Lago Díaz</string>
    <string name="consejero_delegado">Consejero delegado:</string>
    <string name="consejero_delegado_nombre">D.Eduardo Domínguez Garnelo y D.Juan Manceñido Prieto</string>
    <string name="area_economica">Área económica:</string>
    <string name="area_economica_nombre">D.Carlos Castañeiras,D.José Barba Pacios y D.José Barba Merayo</string>
    <string name="area_social">Área social:</string>
    <string name="area_social_nombre">D.Pedro Fernández Nieto y D.Juan Manciñedo Prieto</string>
    <string name="area_deportiva">Área deportiva:</string>
    <string name="area_deportiva_nombre">D.Antonio Blanco Ravena y D.Alfonso Rodríguez-Hevia González</string>
    <string name="marketing_comunicacion">Marketing/Comunicación:</string>
    <string name="marketing_comunicacion_nombre">D.Fernando Castañeiras Folgueral</string>
    <string name="organigrama">Organigrama</string>
    <string name="agradecimientos">Agradecimientos</string>
    <string name="creador">Creador:</string>
    <string name="nombre_creador">App creada por David Gómez Riesgo</string>
    <string name="colaboracion_especial">Colaboración especial:</string>
    <string name="nombre_colaboracion_especial">Natalia Fernández Carreira</string>
    <string name="colaboradores">Colaboradores:</string>
    <string name="nombre_colaboradores_1">Como colaboradores más destacados las páginas web de: </string>
	<string name="nombre_colaboradores_2">-resultados-futbol.com (Marcadores)</string>
	<string name="nombre_colaboradores_3">-marcadores.com (Clasificación)</string>
	<string name="nombre_colaboradores_4">-marca.com, elpais.com, lfp.es y el mundodeportivo.com (Calendario)</string>
	<string name="nombre_colaboradores_5">-wikipedia, lafutbolteca.com, aupadeportiva.com, elbierzodigital.comn(Historia)</string>
	<string name="nombre_colaboradores_6">-Y sobretodo a la Sociedad Deportiva Ponferradina.</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
</resources>