<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  	android:orientation="vertical"
    tools:context="com.deportiva.ayuda.AcercaDe" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/agradecimientos"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:text="@string/creador"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:text="@string/nombre_creador"
        android:background="#4083FF"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:text="@string/colaboracion_especial"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:text="@string/nombre_colaboracion_especial"
        android:background="#4083FF"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:text="@string/colaboradores"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:text="@string/nombre_colaboradores_1"
        android:background="#4083FF"
        android:textColor="@color/white"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_colaboradores_2"
        android:background="#4083FF"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_colaboradores_3"
        android:background="#4083FF"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_colaboradores_4"
        android:background="#4083FF"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_colaboradores_5"
        android:background="#4083FF"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_colaboradores_6"
        android:background="#4083FF"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>
