<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.deportiva.directiva.Directiva" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/presidente"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4083FF"
                android:text="@string/presidente_nombre"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="2dp"
                android:text="@string/vicepresidente"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4083FF"
                android:text="@string/vicepresidente_nombre"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="2dp"
                android:text="@string/secretario"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4083FF"
                android:text="@string/secretario_nombre"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="2dp"
                android:text="@string/consejero_delegado"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4083FF"
                android:text="@string/consejero_delegado_nombre"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="2dp"
                android:text="@string/area_economica"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4083FF"
                android:text="@string/area_economica_nombre"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="2dp"
                android:text="@string/area_social"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4083FF"
                android:text="@string/area_social_nombre"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="2dp"
                android:text="@string/area_deportiva"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4083FF"
                android:text="@string/area_deportiva_nombre"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="2dp"
                android:text="@string/marketing_comunicacion"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4083FF"
                android:text="@string/marketing_comunicacion_nombre"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/boton_organigrama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/organigrama" />

        </LinearLayout>

    </ScrollView>
